fix(CoreFeed): FIxes a layout issue with the core feed and tractor beam core. Closes #2119

--- a/client/src/components/views/TractorBeam/style.scss
+++ b/client/src/components/views/TractorBeam/style.scss
@@ -75,9 +75,8 @@
 }
 .tractor-beam-core {
   label {
-    display: block;
-    float: left;
-    width: 100%;
+    width: 90%;
+    margin-right: 20px;
   }
 }
 
